# weapon_tip_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: current_tip_detector.yaml
config/reference/: slot3_empty_Depth.raw  slot3_empty_Depth_metadata.csv  slot4_empty_Depth.raw  slot4_empty_Depth_metadata.csv
docs/baseline_before_refactor/: baseline_notes.md
include/weapon_tip_detector/: current_tip_detector_node.hpp  depth_projector.hpp  detection_pipeline.hpp  detector_profiles.hpp  detector_types.hpp  detector_utils.hpp  palm_reference_detector.hpp  preview_debugger.hpp
launch/: current_tip_detector.launch.py
src/: current_tip_detector_node.cpp  current_tip_detector_node_refactored.cpp  depth_projector.cpp  detection_pipeline.cpp  detector_profiles.cpp  detector_utils.cpp  palm_reference_detector.cpp  preview_debugger.cpp
